[package]
name = "stale-read-fix"
version = "0.1.0"
edition = "2021"

[lib]
name = "stale_read_fix"
path = "src/lib.rs"

[[bin]]
name = "stale-read-fix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
env_logger = "0.11"

[dev-dependencies]
# No extra dev deps needed, using tokio test harness